--- a/NodeBlock.Plugin.Ethereum.csproj
+++ b/NodeBlock.Plugin.Ethereum.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NodeBlock.Engine\NodeBlock.Engine.csproj" />
+    <ProjectReference Include="..\GraphLinq.Engine\NodeBlock.Engine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
