--- a/NodeBlock.Plugin.Ethereum.csproj
+++ b/NodeBlock.Plugin.Ethereum.csproj
@@ -31,10 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NodeBlock.Engine\NodeBlock.Engine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Graphql.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -47,6 +43,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Graphql.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Nodes\Eth\CoinCreator\Contracts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GraphLinq.Engine\NodeBlock.Engine.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
